--- a/vertx-lang-js/src/main/asciidoc/dataobjects.adoc
+++ b/vertx-lang-js/src/main/asciidoc/dataobjects.adoc
@@ -523,6 +523,9 @@ Set the write option
 |[[contactPoints]]`@contactPoints`|`Array of String`|+++
 Set a list of hosts, where some of cluster nodes is located.
 +++
+|[[keyspace]]`@keyspace`|`String`|+++
+Set the keyspace to use when creating the Cassandra session. Defaults to <code>null</code>.
++++
 |[[port]]`@port`|`Number (int)`|+++
 Set which port should be used for all the hosts to connect to a cassandra service.
 +++
@@ -843,6 +846,23 @@ Set whether Netty pooled buffers are enabled
 +++
 |===
 
+[[Config]]
+== Config
+
+++++
+ A configuration object containing the configuration entries for a resource
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[entries]]`@entries`|`Array of link:dataobjects.html#ConfigEntry[ConfigEntry]`|+++
+Set the configuration entries for a resource
++++
+|===
+
 [[ConfigChange]]
 == ConfigChange
 
@@ -860,6 +880,64 @@ Sets the new configuration.
 +++
 |[[previousConfiguration]]`@previousConfiguration`|`Json object`|+++
 Sets the previous configuration.
++++
+|===
+
+[[ConfigEntry]]
+== ConfigEntry
+
+++++
+ A class representing a configuration entry containing name, value and additional metadata
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[default]]`@default`|`Boolean`|+++
+Set whether the config value is the default or if it's been explicitly set
++++
+|[[name]]`@name`|`String`|+++
+Set the config name
++++
+|[[readOnly]]`@readOnly`|`Boolean`|+++
+Set whether the config is read-only and cannot be updated
++++
+|[[sensitive]]`@sensitive`|`Boolean`|+++
+Set whether the config value is sensitive. The value is always set to null by the broker if the config value is sensitive
++++
+|[[source]]`@source`|`link:enums.html#ConfigSource[ConfigSource]`|+++
+Set the source of this configuration entry
++++
+|[[synonyms]]`@synonyms`|`Array of link:dataobjects.html#ConfigSynonym[ConfigSynonym]`|+++
+Set all config values that may be used as the value of this config along with their source, in the order of precedence
++++
+|[[value]]`@value`|`String`|+++
+Set the value or null. Null is returned if the config is unset or if isSensitive is true
++++
+|===
+
+[[ConfigResource]]
+== ConfigResource
+
+++++
+ A class representing resources that have configuration
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[default]]`@default`|`Boolean`|+++
+Set if this is the default resource of a resource type. Resource name is empty for the default resource.
++++
+|[[name]]`@name`|`String`|+++
+Set the resource name
++++
+|[[type]]`@type`|`link:enums.html#Type[Type]`|+++
+Set the resource type
 +++
 |===
 
@@ -913,6 +991,29 @@ Sets whether or not the store is optional. When the configuration is retrieve, i
 +++
 |[[type]]`@type`|`String`|+++
 Sets the configuration type
++++
+|===
+
+[[ConfigSynonym]]
+== ConfigSynonym
+
+++++
+ Class representing a configuration synonym of a link
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[name]]`@name`|`String`|+++
+Set the name of this configuration
++++
+|[[source]]`@source`|`link:enums.html#ConfigSource[ConfigSource]`|+++
+Set the source of this configuration
++++
+|[[value]]`@value`|`String`|+++
+Set the value of this configuration, which may be null if the configuration is sensitive
 +++
 |===
 
@@ -1148,10 +1249,13 @@ Set the trust options in jks format, aka Java truststore
 Set whether compression is enabled
 +++
 |[[tryUsePerFrameWebsocketCompression]]`@tryUsePerFrameWebsocketCompression`|`Boolean`|+++
-Set option to offer per frame WebSocket compression.
+Set whether the client will offer the WebSocket per-frame deflate compression extension.
 +++
 |[[tryUsePerMessageWebsocketCompression]]`@tryUsePerMessageWebsocketCompression`|`Boolean`|+++
-Set option to offer per message WebSocket compression.
+Set whether the client will offer the WebSocket per-message deflate compression extension.
++++
+|[[tryWebsocketDeflateFrameCompression]]`@tryWebsocketDeflateFrameCompression`|`Boolean`|+++
+
 +++
 |[[useAlpn]]`@useAlpn`|`Boolean`|+++
 Set the ALPN usage.
@@ -1169,13 +1273,67 @@ Sets whether the Web Client should send a user agent header. Defaults to true.
 Set whether hostname verification is enabled
 +++
 |[[websocketCompressionAllowClientNoContext]]`@websocketCompressionAllowClientNoContext`|`Boolean`|+++
-Set the WebSocket compression allow client no context option.
+Set whether the <code>client_no_context_takeover</code> parameter of the WebSocket per-message
+ deflate compression extension will be offered.
 +++
 |[[websocketCompressionLevel]]`@websocketCompressionLevel`|`Number (int)`|+++
-Set WebSocket compression level
+Set the Websocket deflate compression level.
 +++
 |[[websocketCompressionRequestServerNoContext]]`@websocketCompressionRequestServerNoContext`|`Boolean`|+++
-Set the WebSocket compression server no context option
+Set whether the <code>server_no_context_takeover</code> parameter of the WebSocket per-message
+ deflate compression extension will be offered.
++++
+|===
+
+[[ConsumerGroupDescription]]
+== ConsumerGroupDescription
+
+++++
+ A detailed description of a single consumer group in the cluster
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[coordinator]]`@coordinator`|`link:dataobjects.html#Node[Node]`|+++
+Set the consumer group coordinator, or null if the coordinator is not known
++++
+|[[groupId]]`@groupId`|`String`|+++
+Set the id of the consumer group
++++
+|[[members]]`@members`|`Array of link:dataobjects.html#MemberDescription[MemberDescription]`|+++
+Set a list of the members of the consumer group
++++
+|[[partitionAssignor]]`@partitionAssignor`|`String`|+++
+Set the consumer group partition assignor
++++
+|[[simpleConsumerGroup]]`@simpleConsumerGroup`|`Boolean`|+++
+Set if consumer group is simple or not
++++
+|[[state]]`@state`|`link:enums.html#ConsumerGroupState[ConsumerGroupState]`|+++
+Set the consumer group state, or UNKNOWN if the state is too new for us to parse
++++
+|===
+
+[[ConsumerGroupListing]]
+== ConsumerGroupListing
+
+++++
+ A listing of a consumer group in the cluster.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[groupId]]`@groupId`|`String`|+++
+Set the consumer group id
++++
+|[[simpleConsumerGroup]]`@simpleConsumerGroup`|`Boolean`|+++
+Set if consumer group is simple or not
 +++
 |===
 
@@ -1768,6 +1926,11 @@ Set regular expression to filter by tag
 When vert.x cannot find the file on the filesystem it tries to resolve the
  file from the class path when this is set to <code>true</code>.
 +++
+|[[fileCacheDir]]`@fileCacheDir`|`String`|+++
+When vert.x reads a file that is packaged with the application it gets
+ extracted to this directory first and subsequent reads will use the extracted
+ file to get better IO performance.
++++
 |[[fileCachingEnabled]]`@fileCachingEnabled`|`Boolean`|+++
 Set to <code>true</code> to cache files on the real file system
  when the filesystem performs class path resolving.
@@ -1907,6 +2070,23 @@ Set the additional debug data
 +++
 |[[lastStreamId]]`@lastStreamId`|`Number (int)`|+++
 Set the last stream id.
++++
+|===
+
+[[GraphQLHandlerOptions]]
+== GraphQLHandlerOptions
+
+++++
+ Options for configuring the link.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[requestBatchingEnabled]]`@requestBatchingEnabled`|`Boolean`|+++
+Whether request batching should be enabled. Defaults to <code>false</code>.
 +++
 |===
 
@@ -2101,10 +2281,10 @@ Set the maximum requests allowed in the wait queue, any requests beyond the max 
  a ConnectionPoolTooBusyException.  If the value is set to a negative number then the queue will be unbounded.
 +++
 |[[maxWebsocketFrameSize]]`@maxWebsocketFrameSize`|`Number (int)`|+++
-Set the max websocket frame size
+Set the max WebSocket frame size
 +++
 |[[maxWebsocketMessageSize]]`@maxWebsocketMessageSize`|`Number (int)`|+++
-Set the max websocket message size
+Set the max WebSocket message size
 +++
 |[[metricsName]]`@metricsName`|`String`|+++
 Set the metrics name identifying the reported metrics, useful for grouping metrics
@@ -2154,9 +2334,12 @@ Set the value of reuse port.
 Set the TCP send buffer size
 +++
 |[[sendUnmaskedFrames]]`@sendUnmaskedFrames`|`Boolean`|+++
-Set true when the client wants to skip frame masking.
- You may want to set it true on server by server websocket communication: In this case you are by passing RFC6455 protocol.
- It's false as default.
+Set <code>true</code> when the client wants to skip frame masking.
+ <p>
+ You may want to set it <code>true</code> on server by server WebSocket communication: in this case you are by passing
+ RFC6455 protocol.
+ <p>
+ It's <code>false</code> as default.
 +++
 |[[soLinger]]`@soLinger`|`Number (int)`|+++
 Set whether SO_linger keep alive is enabled
@@ -2192,10 +2375,13 @@ Set the trust options in jks format, aka Java truststore
 Set whether compression is enabled
 +++
 |[[tryUsePerFrameWebsocketCompression]]`@tryUsePerFrameWebsocketCompression`|`Boolean`|+++
-Set option to offer per frame WebSocket compression.
+Set whether the client will offer the WebSocket per-frame deflate compression extension.
 +++
 |[[tryUsePerMessageWebsocketCompression]]`@tryUsePerMessageWebsocketCompression`|`Boolean`|+++
-Set option to offer per message WebSocket compression.
+Set whether the client will offer the WebSocket per-message deflate compression extension.
++++
+|[[tryWebsocketDeflateFrameCompression]]`@tryWebsocketDeflateFrameCompression`|`Boolean`|+++
+
 +++
 |[[useAlpn]]`@useAlpn`|`Boolean`|+++
 Set the ALPN usage.
@@ -2207,13 +2393,15 @@ Set whether Netty pooled buffers are enabled
 Set whether hostname verification is enabled
 +++
 |[[websocketCompressionAllowClientNoContext]]`@websocketCompressionAllowClientNoContext`|`Boolean`|+++
-Set the WebSocket compression allow client no context option.
+Set whether the <code>client_no_context_takeover</code> parameter of the WebSocket per-message
+ deflate compression extension will be offered.
 +++
 |[[websocketCompressionLevel]]`@websocketCompressionLevel`|`Number (int)`|+++
-Set WebSocket compression level
+Set the Websocket deflate compression level.
 +++
 |[[websocketCompressionRequestServerNoContext]]`@websocketCompressionRequestServerNoContext`|`Boolean`|+++
-Set the WebSocket compression server no context option
+Set whether the <code>server_no_context_takeover</code> parameter of the WebSocket per-message
+ deflate compression extension will be offered.
 +++
 |===
 
@@ -2264,9 +2452,9 @@ Sets whether or not the HTTP service is using <code>https</code>.
 Set the accept back log
 +++
 |[[acceptUnmaskedFrames]]`@acceptUnmaskedFrames`|`Boolean`|+++
-Set true when the server accepts unmasked frame.
- As default Server doesn't accept unmasked frame, you can bypass this behaviour (RFC 6455) setting true
- It's set to false as default.
+Set <code>true</code> when the server accepts unmasked frame.
+ As default Server doesn't accept unmasked frame, you can bypass this behaviour (RFC 6455) setting <code>true</code>.
+ It's set to <code>false</code> as default.
 +++
 |[[alpnVersions]]`@alpnVersions`|`Array of link:enums.html#HttpVersion[HttpVersion]`|+++
 Set the list of protocol versions to provide to the server during the Application-Layer Protocol Negotiatiation.
@@ -2364,10 +2552,10 @@ Set the maximum length of all headers for HTTP/1.x .
 Set the maximum length of the initial line for HTTP/1.x (e.g. <code>"GET / HTTP/1.0"</code>)
 +++
 |[[maxWebsocketFrameSize]]`@maxWebsocketFrameSize`|`Number (int)`|+++
-Set the maximum websocket frames size
+Set the maximum WebSocket frames size
 +++
 |[[maxWebsocketMessageSize]]`@maxWebsocketMessageSize`|`Number (int)`|+++
-Set the maximum websocket message size
+Set the maximum WebSocket message size
 +++
 |[[openSslEngineOptions]]`@openSslEngineOptions`|`link:dataobjects.html#OpenSSLEngineOptions[OpenSSLEngineOptions]`|-
 |[[pemKeyCertOptions]]`@pemKeyCertOptions`|`link:dataobjects.html#PemKeyCertOptions[PemKeyCertOptions]`|+++
@@ -2377,10 +2565,10 @@ Set the key/cert store options in pem format.
 Set the trust options in pem format
 +++
 |[[perFrameWebsocketCompressionSupported]]`@perFrameWebsocketCompressionSupported`|`Boolean`|+++
-Enable or disable support for WebSocket Defalte Frame compression
+Enable or disable support for the WebSocket per-frame deflate compression extension.
 +++
 |[[perMessageWebsocketCompressionSupported]]`@perMessageWebsocketCompressionSupported`|`Boolean`|+++
-Enable or disable support for WebSocket Permessage Deflate compression
+Enable or disable support for WebSocket per-message deflate compression extension.
 +++
 |[[pfxKeyCertOptions]]`@pfxKeyCertOptions`|`link:dataobjects.html#PfxOptions[PfxOptions]`|+++
 Set the key/cert options in pfx format.
@@ -2442,16 +2630,18 @@ Set the ALPN usage.
 Set whether Netty pooled buffers are enabled
 +++
 |[[websocketAllowServerNoContext]]`@websocketAllowServerNoContext`|`Boolean`|+++
-Set the WebSocket Allow Server No Context option
+Set whether the WebSocket server will accept the <code>server_no_context_takeover</code> parameter of the per-message
+ deflate compression extension offered by the client.
 +++
 |[[websocketCompressionLevel]]`@websocketCompressionLevel`|`Number (int)`|+++
-Set the WebSocket compression level
+Set the WebSocket compression level.
 +++
 |[[websocketPreferredClientNoContext]]`@websocketPreferredClientNoContext`|`Boolean`|+++
-Set the WebSocket Preferred Client No Context setting
+Set whether the WebSocket server will accept the <code>client_no_context_takeover</code> parameter of the per-message
+ deflate compression extension offered by the client.
 +++
 |[[websocketSubProtocols]]`@websocketSubProtocols`|`String`|+++
-Set the websocket subprotocols supported by the server.
+Set the WebSocket sub-protocols supported by the server.
 +++
 |===
 
@@ -2471,9 +2661,9 @@ Set the websocket subprotocols supported by the server.
 Set the accept back log
 +++
 |[[acceptUnmaskedFrames]]`@acceptUnmaskedFrames`|`Boolean`|+++
-Set true when the server accepts unmasked frame.
- As default Server doesn't accept unmasked frame, you can bypass this behaviour (RFC 6455) setting true
- It's set to false as default.
+Set <code>true</code> when the server accepts unmasked frame.
+ As default Server doesn't accept unmasked frame, you can bypass this behaviour (RFC 6455) setting <code>true</code>.
+ It's set to <code>false</code> as default.
 +++
 |[[alpnVersions]]`@alpnVersions`|`Array of link:enums.html#HttpVersion[HttpVersion]`|+++
 Set the list of protocol versions to provide to the server during the Application-Layer Protocol Negotiatiation.
@@ -2580,10 +2770,10 @@ Set the maximum length of all headers for HTTP/1.x .
 Set the maximum length of the initial line for HTTP/1.x (e.g. <code>"GET / HTTP/1.0"</code>)
 +++
 |[[maxWebsocketFrameSize]]`@maxWebsocketFrameSize`|`Number (int)`|+++
-Set the maximum websocket frames size
+Set the maximum WebSocket frames size
 +++
 |[[maxWebsocketMessageSize]]`@maxWebsocketMessageSize`|`Number (int)`|+++
-Set the maximum websocket message size
+Set the maximum WebSocket message size
 +++
 |[[openSslEngineOptions]]`@openSslEngineOptions`|`link:dataobjects.html#OpenSSLEngineOptions[OpenSSLEngineOptions]`|-
 |[[pemKeyCertOptions]]`@pemKeyCertOptions`|`link:dataobjects.html#PemKeyCertOptions[PemKeyCertOptions]`|+++
@@ -2593,10 +2783,10 @@ Set the key/cert store options in pem format.
 Set the trust options in pem format
 +++
 |[[perFrameWebsocketCompressionSupported]]`@perFrameWebsocketCompressionSupported`|`Boolean`|+++
-Enable or disable support for WebSocket Defalte Frame compression
+Enable or disable support for the WebSocket per-frame deflate compression extension.
 +++
 |[[perMessageWebsocketCompressionSupported]]`@perMessageWebsocketCompressionSupported`|`Boolean`|+++
-Enable or disable support for WebSocket Permessage Deflate compression
+Enable or disable support for WebSocket per-message deflate compression extension.
 +++
 |[[pfxKeyCertOptions]]`@pfxKeyCertOptions`|`link:dataobjects.html#PfxOptions[PfxOptions]`|+++
 Set the key/cert options in pfx format.
@@ -2673,16 +2863,18 @@ Set whether Netty pooled buffers are enabled
 Set <code>vertxshell.js</code> resource to use.
 +++
 |[[websocketAllowServerNoContext]]`@websocketAllowServerNoContext`|`Boolean`|+++
-Set the WebSocket Allow Server No Context option
+Set whether the WebSocket server will accept the <code>server_no_context_takeover</code> parameter of the per-message
+ deflate compression extension offered by the client.
 +++
 |[[websocketCompressionLevel]]`@websocketCompressionLevel`|`Number (int)`|+++
-Set the WebSocket compression level
+Set the WebSocket compression level.
 +++
 |[[websocketPreferredClientNoContext]]`@websocketPreferredClientNoContext`|`Boolean`|+++
-Set the WebSocket Preferred Client No Context setting
+Set whether the WebSocket server will accept the <code>client_no_context_takeover</code> parameter of the per-message
+ deflate compression extension offered by the client.
 +++
 |[[websocketSubProtocols]]`@websocketSubProtocols`|`String`|+++
-Set the websocket subprotocols supported by the server.
+Set the WebSocket sub-protocols supported by the server.
 +++
 |===
 
@@ -3353,6 +3545,49 @@ Set the type of matching to apply.
 +++
 |[[value]]`@value`|`String`|+++
 Set the matched value.
++++
+|===
+
+[[MemberAssignment]]
+== MemberAssignment
+
+++++
+ A description of the assignments of a specific group member
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[topicPartitions]]`@topicPartitions`|`Array of link:dataobjects.html#TopicPartition[TopicPartition]`|+++
+Set the list of topic partitions
++++
+|===
+
+[[MemberDescription]]
+== MemberDescription
+
+++++
+ A detailed description of a single group instance in the cluster
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[assignment]]`@assignment`|`link:dataobjects.html#MemberAssignment[MemberAssignment]`|+++
+Set the assignment of the group member
++++
+|[[clientId]]`@clientId`|`String`|+++
+Set the client id of the group member
++++
+|[[consumerId]]`@consumerId`|`String`|+++
+Set the consumer id of the group member
++++
+|[[host]]`@host`|`String`|+++
+Set the host where the group member is running
 +++
 |===
 
@@ -4188,6 +4423,32 @@ Set the value of traffic class
 +++
 |===
 
+[[NewTopic]]
+== NewTopic
+
+++++
+ A new topic to be created
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[config]]`@config`|`String`|+++
+Set the configuration for the new topic or null if no configs ever specified
++++
+|[[name]]`@name`|`String`|+++
+Set the name of the topic to be created
++++
+|[[numPartitions]]`@numPartitions`|`Number (int)`|+++
+Set the number of partitions for the new topic or -1 if a replica assignment has been specified
++++
+|[[replicationFactor]]`@replicationFactor`|`Number (short)`|+++
+Set the replication factor for the new topic or -1 if a replica assignment has been specified
++++
+|===
+
 [[Node]]
 == Node
 
@@ -4445,10 +4706,10 @@ Set the maximum requests allowed in the wait queue, any requests beyond the max 
  a ConnectionPoolTooBusyException.  If the value is set to a negative number then the queue will be unbounded.
 +++
 |[[maxWebsocketFrameSize]]`@maxWebsocketFrameSize`|`Number (int)`|+++
-Set the max websocket frame size
+Set the max WebSocket frame size
 +++
 |[[maxWebsocketMessageSize]]`@maxWebsocketMessageSize`|`Number (int)`|+++
-Set the max websocket message size
+Set the max WebSocket message size
 +++
 |[[metricsName]]`@metricsName`|`String`|+++
 Set the metrics name identifying the reported metrics, useful for grouping metrics
@@ -4507,9 +4768,12 @@ Set the provider scope separator
 Set the TCP send buffer size
 +++
 |[[sendUnmaskedFrames]]`@sendUnmaskedFrames`|`Boolean`|+++
-Set true when the client wants to skip frame masking.
- You may want to set it true on server by server websocket communication: In this case you are by passing RFC6455 protocol.
- It's false as default.
+Set <code>true</code> when the client wants to skip frame masking.
+ <p>
+ You may want to set it <code>true</code> on server by server WebSocket communication: in this case you are by passing
+ RFC6455 protocol.
+ <p>
+ It's <code>false</code> as default.
 +++
 |[[site]]`@site`|`String`|+++
 Root URL for the provider
@@ -4551,10 +4815,13 @@ Set the trust options in jks format, aka Java truststore
 Set whether compression is enabled
 +++
 |[[tryUsePerFrameWebsocketCompression]]`@tryUsePerFrameWebsocketCompression`|`Boolean`|+++
-Set option to offer per frame WebSocket compression.
+Set whether the client will offer the WebSocket per-frame deflate compression extension.
 +++
 |[[tryUsePerMessageWebsocketCompression]]`@tryUsePerMessageWebsocketCompression`|`Boolean`|+++
-Set option to offer per message WebSocket compression.
+Set whether the client will offer the WebSocket per-message deflate compression extension.
++++
+|[[tryWebsocketDeflateFrameCompression]]`@tryWebsocketDeflateFrameCompression`|`Boolean`|+++
+
 +++
 |[[useAlpn]]`@useAlpn`|`Boolean`|+++
 Set the ALPN usage.
@@ -4579,13 +4846,15 @@ Set the provider userInfo resource path
 Set whether hostname verification is enabled
 +++
 |[[websocketCompressionAllowClientNoContext]]`@websocketCompressionAllowClientNoContext`|`Boolean`|+++
-Set the WebSocket compression allow client no context option.
+Set whether the <code>client_no_context_takeover</code> parameter of the WebSocket per-message
+ deflate compression extension will be offered.
 +++
 |[[websocketCompressionLevel]]`@websocketCompressionLevel`|`Number (int)`|+++
-Set WebSocket compression level
+Set the Websocket deflate compression level.
 +++
 |[[websocketCompressionRequestServerNoContext]]`@websocketCompressionRequestServerNoContext`|`Boolean`|+++
-Set the WebSocket compression server no context option
+Set whether the <code>server_no_context_takeover</code> parameter of the WebSocket per-message
+ deflate compression extension will be offered.
 +++
 |===
 
@@ -5358,6 +5627,48 @@ Set the timestamp of the record in the topic/partition
 +++
 |[[topic]]`@topic`|`String`|+++
 Set the topic the record was appended to
++++
+|===
+
+[[RedisOptions]]
+== RedisOptions
+
+++++
+ Redis Client Configuration options.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[masterName]]`@masterName`|`String`|+++
+Set the master name (only considered in HA mode).
++++
+|[[maxNestedArrays]]`@maxNestedArrays`|`Number (int)`|+++
+Tune how much nested arrays are allowed on a redis response. This affects the parser performance.
++++
+|[[maxWaitingHandlers]]`@maxWaitingHandlers`|`Number (int)`|+++
+The client will always work on pipeline mode, this means that messages can start queueing. You can control how much
+ backlog you're willing to accept. This methods sets how much handlers is the client willing to queue.
++++
+|[[netClientOptions]]`@netClientOptions`|`link:dataobjects.html#NetClientOptions[NetClientOptions]`|+++
+Set the net client options to be used while connecting to the redis server. Use this to tune your connection.
++++
+|[[password]]`@password`|`String`|+++
+Set the provided password to be used when establishing a connection to the server.
++++
+|[[role]]`@role`|`link:enums.html#RedisRole[RedisRole]`|+++
+Set the role name (only considered in HA mode).
++++
+|[[select]]`@select`|`Number (Integer)`|+++
+Set the provided database to be selected when establishing a connection to the server.
++++
+|[[type]]`@type`|`link:enums.html#RedisClientType[RedisClientType]`|+++
+Set the desired client type to be created.
++++
+|[[useSlave]]`@useSlave`|`link:enums.html#RedisSlaves[RedisSlaves]`|+++
+Set whether or not to use slave nodes (only considered in Cluster mode).
 +++
 |===
 
@@ -6828,6 +7139,30 @@ Configure the execution to use an event loop when there is no one existing.
 +++
 |===
 
+[[TopicDescription]]
+== TopicDescription
+
+++++
+ A detailed description of a single topic in the cluster
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[internal]]`@internal`|`Boolean`|+++
+Set whether the topic is internal to Kafka.
++++
+|[[name]]`@name`|`String`|+++
+Set the name of the topic.
++++
+|[[partitions]]`@partitions`|`Array of link:dataobjects.html#TopicPartitionInfo[TopicPartitionInfo]`|+++
+Set A list of partitions where the index represents the partition id and the element
+ contains leadership and replica information for that partition.
++++
+|===
+
 [[TopicPartition]]
 == TopicPartition
 
@@ -6845,6 +7180,32 @@ Set the partition number
 +++
 |[[topic]]`@topic`|`String`|+++
 Set the topic name
++++
+|===
+
+[[TopicPartitionInfo]]
+== TopicPartitionInfo
+
+++++
+ A class containing leadership, replicas and ISR information for a topic partition.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[isr]]`@isr`|`Array of link:dataobjects.html#Node[Node]`|+++
+Set the subset of the replicas that are in sync
++++
+|[[leader]]`@leader`|`link:dataobjects.html#Node[Node]`|+++
+Set the node id of the node currently acting as a leader
++++
+|[[partition]]`@partition`|`Number (int)`|+++
+Set the partition id
++++
+|[[replicas]]`@replicas`|`Array of link:dataobjects.html#Node[Node]`|+++
+Set the complete set of replicas for this partition
 +++
 |===
 
@@ -7119,8 +7480,6 @@ Set the number of event loop threads to be used by the Vert.x instance.
 +++
 |[[fileResolverCachingEnabled]]`@fileResolverCachingEnabled`|`Boolean`|+++
 Set whether the Vert.x file resolver uses caching for classpath resources.
-
- Deprecated. Use FileSystemOptions instead.
 +++
 |[[fileSystemOptions]]`@fileSystemOptions`|`link:dataobjects.html#FileSystemOptions[FileSystemOptions]`|+++
 Set the file system options
@@ -7330,10 +7689,10 @@ Set the maximum requests allowed in the wait queue, any requests beyond the max 
  a ConnectionPoolTooBusyException.  If the value is set to a negative number then the queue will be unbounded.
 +++
 |[[maxWebsocketFrameSize]]`@maxWebsocketFrameSize`|`Number (int)`|+++
-Set the max websocket frame size
+Set the max WebSocket frame size
 +++
 |[[maxWebsocketMessageSize]]`@maxWebsocketMessageSize`|`Number (int)`|+++
-Set the max websocket message size
+Set the max WebSocket message size
 +++
 |[[metricsName]]`@metricsName`|`String`|+++
 Set the metrics name identifying the reported metrics, useful for grouping metrics
@@ -7383,9 +7742,12 @@ Set the value of reuse port.
 Set the TCP send buffer size
 +++
 |[[sendUnmaskedFrames]]`@sendUnmaskedFrames`|`Boolean`|+++
-Set true when the client wants to skip frame masking.
- You may want to set it true on server by server websocket communication: In this case you are by passing RFC6455 protocol.
- It's false as default.
+Set <code>true</code> when the client wants to skip frame masking.
+ <p>
+ You may want to set it <code>true</code> on server by server WebSocket communication: in this case you are by passing
+ RFC6455 protocol.
+ <p>
+ It's <code>false</code> as default.
 +++
 |[[soLinger]]`@soLinger`|`Number (int)`|+++
 Set whether SO_linger keep alive is enabled
@@ -7421,10 +7783,13 @@ Set the trust options in jks format, aka Java truststore
 Set whether compression is enabled
 +++
 |[[tryUsePerFrameWebsocketCompression]]`@tryUsePerFrameWebsocketCompression`|`Boolean`|+++
-Set option to offer per frame WebSocket compression.
+Set whether the client will offer the WebSocket per-frame deflate compression extension.
 +++
 |[[tryUsePerMessageWebsocketCompression]]`@tryUsePerMessageWebsocketCompression`|`Boolean`|+++
-Set option to offer per message WebSocket compression.
+Set whether the client will offer the WebSocket per-message deflate compression extension.
++++
+|[[tryWebsocketDeflateFrameCompression]]`@tryWebsocketDeflateFrameCompression`|`Boolean`|+++
+
 +++
 |[[useAlpn]]`@useAlpn`|`Boolean`|+++
 Set the ALPN usage.
@@ -7442,13 +7807,15 @@ Sets whether the Web Client should send a user agent header. Defaults to true.
 Set whether hostname verification is enabled
 +++
 |[[websocketCompressionAllowClientNoContext]]`@websocketCompressionAllowClientNoContext`|`Boolean`|+++
-Set the WebSocket compression allow client no context option.
+Set whether the <code>client_no_context_takeover</code> parameter of the WebSocket per-message
+ deflate compression extension will be offered.
 +++
 |[[websocketCompressionLevel]]`@websocketCompressionLevel`|`Number (int)`|+++
-Set WebSocket compression level
+Set the Websocket deflate compression level.
 +++
 |[[websocketCompressionRequestServerNoContext]]`@websocketCompressionRequestServerNoContext`|`Boolean`|+++
-Set the WebSocket compression server no context option
+Set whether the <code>server_no_context_takeover</code> parameter of the WebSocket per-message
+ deflate compression extension will be offered.
 +++
 |===
 
