--- a/vertx-lang-js/src/main/asciidoc/dataobjects.adoc
+++ b/vertx-lang-js/src/main/asciidoc/dataobjects.adoc
@@ -273,6 +273,235 @@ Sets the value to use as the hostname field in the AMQP Open frame. Defaults to 
 |[[virtualHost]]`@virtualHost`|`String`|-
 |===
 
+[[AmqpClientOptions]]
+== AmqpClientOptions
+
+++++
+ Configures the AMQP Client.
+ You can also configure the underlying Proton instance. Refer to  for details.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[connectTimeout]]`@connectTimeout`|`Number (int)`|+++
+
++++
+|[[containerId]]`@containerId`|`String`|+++
+Sets the container id.
++++
+|[[crlPaths]]`@crlPaths`|`Array of String`|+++
+
++++
+|[[crlValues]]`@crlValues`|`Array of Buffer`|+++
+
++++
+|[[enabledCipherSuites]]`@enabledCipherSuites`|`Array of String`|+++
+
++++
+|[[enabledSaslMechanisms]]`@enabledSaslMechanisms`|`Array of String`|+++
+
++++
+|[[enabledSecureTransportProtocols]]`@enabledSecureTransportProtocols`|`Array of String`|+++
+
++++
+|[[heartbeat]]`@heartbeat`|`Number (int)`|+++
+
++++
+|[[host]]`@host`|`String`|+++
+Sets the host.
++++
+|[[hostnameVerificationAlgorithm]]`@hostnameVerificationAlgorithm`|`String`|+++
+
++++
+|[[idleTimeout]]`@idleTimeout`|`Number (int)`|+++
+
++++
+|[[idleTimeoutUnit]]`@idleTimeoutUnit`|`link:enums.html#TimeUnit[TimeUnit]`|+++
+Set the idle timeout unit. If not specified, default is seconds.
++++
+|[[jdkSslEngineOptions]]`@jdkSslEngineOptions`|`link:dataobjects.html#JdkSSLEngineOptions[JdkSSLEngineOptions]`|+++
+
++++
+|[[keyStoreOptions]]`@keyStoreOptions`|`link:dataobjects.html#JksOptions[JksOptions]`|+++
+
++++
+|[[localAddress]]`@localAddress`|`String`|+++
+
++++
+|[[logActivity]]`@logActivity`|`Boolean`|+++
+Set to true to enabled network activity logging: Netty's pipeline is configured for logging on Netty's logger.
++++
+|[[maxFrameSize]]`@maxFrameSize`|`Number (int)`|+++
+
++++
+|[[metricsName]]`@metricsName`|`String`|+++
+Set the metrics name identifying the reported metrics, useful for grouping metrics
+ with the same name.
++++
+|[[openSslEngineOptions]]`@openSslEngineOptions`|`link:dataobjects.html#OpenSSLEngineOptions[OpenSSLEngineOptions]`|+++
+
++++
+|[[password]]`@password`|`String`|+++
+Sets the password.
++++
+|[[pemKeyCertOptions]]`@pemKeyCertOptions`|`link:dataobjects.html#PemKeyCertOptions[PemKeyCertOptions]`|+++
+
++++
+|[[pemTrustOptions]]`@pemTrustOptions`|`link:dataobjects.html#PemTrustOptions[PemTrustOptions]`|+++
+
++++
+|[[pfxKeyCertOptions]]`@pfxKeyCertOptions`|`link:dataobjects.html#PfxOptions[PfxOptions]`|+++
+
++++
+|[[pfxTrustOptions]]`@pfxTrustOptions`|`link:dataobjects.html#PfxOptions[PfxOptions]`|+++
+
++++
+|[[port]]`@port`|`Number (int)`|+++
+Sets the port.
++++
+|[[proxyOptions]]`@proxyOptions`|`link:dataobjects.html#ProxyOptions[ProxyOptions]`|+++
+Set proxy options for connections via CONNECT proxy (e.g. Squid) or a SOCKS proxy.
++++
+|[[receiveBufferSize]]`@receiveBufferSize`|`Number (int)`|+++
+
++++
+|[[reconnectAttempts]]`@reconnectAttempts`|`Number (int)`|+++
+
++++
+|[[reconnectInterval]]`@reconnectInterval`|`Number (long)`|+++
+
++++
+|[[reuseAddress]]`@reuseAddress`|`Boolean`|+++
+
++++
+|[[reusePort]]`@reusePort`|`Boolean`|+++
+
++++
+|[[sendBufferSize]]`@sendBufferSize`|`Number (int)`|+++
+
++++
+|[[sniServerName]]`@sniServerName`|`String`|+++
+
++++
+|[[soLinger]]`@soLinger`|`Number (int)`|+++
+
++++
+|[[ssl]]`@ssl`|`Boolean`|+++
+
++++
+|[[tcpCork]]`@tcpCork`|`Boolean`|+++
+
++++
+|[[tcpFastOpen]]`@tcpFastOpen`|`Boolean`|+++
+
++++
+|[[tcpKeepAlive]]`@tcpKeepAlive`|`Boolean`|+++
+
++++
+|[[tcpNoDelay]]`@tcpNoDelay`|`Boolean`|+++
+
++++
+|[[tcpQuickAck]]`@tcpQuickAck`|`Boolean`|+++
+
++++
+|[[trafficClass]]`@trafficClass`|`Number (int)`|+++
+
++++
+|[[trustAll]]`@trustAll`|`Boolean`|+++
+
++++
+|[[trustStoreOptions]]`@trustStoreOptions`|`link:dataobjects.html#JksOptions[JksOptions]`|+++
+
++++
+|[[useAlpn]]`@useAlpn`|`Boolean`|+++
+Set the ALPN usage.
++++
+|[[usePooledBuffers]]`@usePooledBuffers`|`Boolean`|+++
+
++++
+|[[username]]`@username`|`String`|+++
+Sets the username.
++++
+|[[virtualHost]]`@virtualHost`|`String`|+++
+
++++
+|===
+
+[[AmqpReceiverOptions]]
+== AmqpReceiverOptions
+
+++++
+ Configures the AMQP Receiver.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[capabilities]]`@capabilities`|`Array of String`|+++
+Sets the list of desired capabilities
+ A registry of commonly defined source capabilities and their meanings is maintained at
+ <a href="http://www.amqp.org/specification/1.0/source-capabilities">AMQP Source Capabilities</a>.
++++
+|[[capabilitys]]`@capabilitys`|`Array of String`|+++
+Adds a desired capability.
+ A registry of commonly defined source capabilities and their meanings is maintained at
+ <a href="http://www.amqp.org/specification/1.0/source-capabilities">AMQP Source Capabilities</a>.
++++
+|[[durable]]`@durable`|`Boolean`|+++
+Sets the durability.
+ <p>
+ Passing <code>true</code> sets the expiry policy of the source to <code>NEVER</code> and the durability of the source
+ to <code>UNSETTLED_STATE</code>.
++++
+|[[dynamic]]`@dynamic`|`Boolean`|+++
+Sets whether the link remote terminus to be used should indicate it is
+ 'dynamic', requesting the peer names it with a dynamic address.
+ <p>
+ The address provided by the peer can then be inspected using the
+ link method on the link received once opened.
++++
+|[[linkName]]`@linkName`|`String`|-
+|[[maxBufferedMessages]]`@maxBufferedMessages`|`Number (int)`|+++
+Sets the max buffered messages. This message can be used to configure the initial credit of a receiver.
++++
+|[[qos]]`@qos`|`String`|+++
+Sets the local QOS config.
++++
+|===
+
+[[AmqpSenderOptions]]
+== AmqpSenderOptions
+
+++++
+ Configures the AMQP Receiver.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[autoDrained]]`@autoDrained`|`Boolean`|+++
+Sets whether the link is automatically marked drained after the send queue drain handler callback
+ returns if the receiving peer requested that credit be drained.
+ <p>
+ <code>true</code> by default.
++++
+|[[dynamic]]`@dynamic`|`Boolean`|+++
+Sets whether the link remote terminus to be used should indicate it is
+ 'dynamic', requesting the peer names it with a dynamic address.
+ <p>
+ The address provided by the peer can then be inspected using the
+ link method on the link received once opened.
++++
+|[[linkName]]`@linkName`|`String`|-
+|===
+
 [[Argument]]
 == Argument
 
